--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -8,15 +8,19 @@ RUN set -x && apt-get update -y && apt-get upgrade -y && apt-get install -y vim
 # 设置工作目录
 WORKDIR /go/src
 
-# 编译时的环境变量
-ENV CGO_ENABLED=0
+# 设置时区为上海
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
 
-ENV GO111MODULE=on
+# 设置编码
+ENV LANG C.UTF-8
+
+# 编译时的环境变量
+ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on
 
 # 依赖下载
 ENV GOPROXY=https://goproxy.cn,direct
 
-ENV GOPATH=/go/src
+ENV GOPATH=/go:/go/src
 
 
 #将Dockerfile 中的文件存储到/app下
