--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     log_not_found               off;
     types_hash_max_size         2048;
     types_hash_bucket_size      64;
-    client_max_body_size        16M;
+    client_max_body_size        2048M;
     keepalive_timeout           65;
     client_header_buffer_size   512k;
     large_client_header_buffers 4 512k;
@@ -75,15 +75,15 @@ http {
 }
 
 # rabbitmq通信
-# stream{
-#    upstream rabbitTcp{
-#        server rabbitmq1:5672;
-#        server rabbitmq2:5672;
-#        server rabbitmq3:5672;
-#    }
+stream{
+   upstream rabbitTcp{
+       server rabbitmq1:5672;
+       server rabbitmq2:5672;
+       server rabbitmq3:5672;
+   }
 
-#    server {
-#        listen 5675;
-#        proxy_pass rabbitTcp;
-#    }
-#}
+   server {
+       listen 5675;
+       proxy_pass rabbitTcp;
+   }
+}
