--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,7 +117,7 @@ services:
       - "6379:6379"
     volumes:
       - ./redis/data:/data
-      - ./redis/redis.conf:/usr/local/redis/redis.conf
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
       - ./redis/redis.log:/usr/local/redis/redis.log    
       - ./redis/conf:/usr/local/etc/redis
     environment:
